<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.UpdateFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/color_ffffff"
            app:navigationIconTint="@color/color_ffffff"
            app:titleCentered="true"
            app:title="@string/option_menu_modify"
            app:elevation="1dp" >

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_close" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/center_container"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_marginTop="36dp"
            android:id="@+id/coverImageView"
            android:layout_width="180dp"
            android:layout_height="260dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/CustomRoundImageView"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/center_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/background_corner_10"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/secondContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/editButton"
            android:layout_marginHorizontal="17dp"
            android:background="@android:color/transparent"
            android:text="원피스 1권"
            android:textSize="16sp"
            android:textColor="@color/color_212121"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:cursorVisible="false"
            android:inputType="text" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/editButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/brn_redo"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/secondContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintBottom_toTopOf="@id/updateButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/center_container">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_cover_image"
                android:textColor="@color/color_212121"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/view_all_u"
                android:textColor="@color/color_212121" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/save"
        android:textColor="@color/color_ffffff"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:enabled="false"
        android:backgroundTint="@color/color_b1b1b1"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/secondContainer"
        app:layout_constraintRight_toRightOf="@id/secondContainer">

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>